fix: flytter periodisering ut til steg og oppslag på OpptjeningResultat +InntektArbeidYtelseGrunnlag. Gjør at vi ikke trenger å slå opp disse flere ganger i dypere ned i koden (#2317)