@@ -1,9 +1,13 @@
 package no.nav.k9.sak.domene.opptjening;
 
 import java.time.LocalDate;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.NavigableMap;
 import java.util.Optional;
+import java.util.TreeMap;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 
 import javax.enterprise.context.Dependent;
@@ -13,7 +17,6 @@ import no.nav.k9.sak.behandling.BehandlingReferanse;
 import no.nav.k9.sak.behandlingslager.behandling.opptjening.OpptjeningRepository;
 import no.nav.k9.sak.behandlingslager.behandling.opptjening.OpptjeningResultat;
 import no.nav.k9.sak.domene.arbeidsforhold.InntektArbeidYtelseTjeneste;
-import no.nav.k9.sak.domene.iay.modell.InntektArbeidYtelseGrunnlag;
 import no.nav.k9.sak.domene.iay.modell.InntektFilter;
 import no.nav.k9.sak.domene.iay.modell.Opptjeningsnøkkel;
 import no.nav.k9.sak.domene.typer.tid.DatoIntervallEntitet;
@@ -23,7 +26,7 @@ import no.nav.k9.sak.typer.AktørId;
 @Dependent
 public class OpptjeningInntektArbeidYtelseTjeneste {
 
-    private InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste;
+    private InntektArbeidYtelseTjeneste iayTjeneste;
     private OpptjeningRepository opptjeningRepository;
     private OpptjeningsperioderTjeneste opptjeningsperioderTjeneste;
 
@@ -32,10 +35,10 @@ public class OpptjeningInntektArbeidYtelseTjeneste {
     }
 
     @Inject
-    public OpptjeningInntektArbeidYtelseTjeneste(InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste,
-                                                     OpptjeningRepository opptjeningRepository,
-                                                     OpptjeningsperioderTjeneste opptjeningsperioderTjeneste) {
-        this.inntektArbeidYtelseTjeneste = inntektArbeidYtelseTjeneste;
+    public OpptjeningInntektArbeidYtelseTjeneste(InntektArbeidYtelseTjeneste iayTjeneste,
+                                                 OpptjeningRepository opptjeningRepository,
+                                                 OpptjeningsperioderTjeneste opptjeningsperioderTjeneste) {
+        this.iayTjeneste = iayTjeneste;
         this.opptjeningRepository = opptjeningRepository;
         this.opptjeningsperioderTjeneste = opptjeningsperioderTjeneste;
     }
@@ -46,29 +49,44 @@ public class OpptjeningInntektArbeidYtelseTjeneste {
             .orElseThrow(() -> new IllegalStateException("Utvikler-feil: Mangler Opptjening for Behandling: " + behandlingId));
     }
 
-    /** Hent alle inntekter for søker der det finnes arbeidsgiver*/
-    public List<OpptjeningInntektPeriode> hentRelevanteOpptjeningInntekterForVilkårVurdering(Long behandlingId, AktørId aktørId, LocalDate skjæringstidspunkt) {
-        Optional<InntektArbeidYtelseGrunnlag> grunnlagOpt = inntektArbeidYtelseTjeneste.finnGrunnlag(behandlingId);
-
-        if (grunnlagOpt.isPresent()) {
-            InntektArbeidYtelseGrunnlag grunnlag = grunnlagOpt.get();
-            var filter = new InntektFilter(grunnlag.getAktørInntektFraRegister(aktørId)).før(skjæringstidspunkt).filterPensjonsgivende();
-
-            var result = filter.filter((inntekt, inntektspost) -> inntekt.getArbeidsgiver() != null)
-                .mapInntektspost((inntekt, inntektspost) -> {
-                    Opptjeningsnøkkel opptjeningsnøkkel = new Opptjeningsnøkkel(null, inntekt.getArbeidsgiver());
-                    return new OpptjeningInntektPeriode(inntektspost, opptjeningsnøkkel);
-                });
-            return List.copyOf(result);
+    /** Hent alle inntekter for søker der det finnes arbeidsgiver */
+    public NavigableMap<LocalDate, List<OpptjeningInntektPeriode>> hentRelevanteOpptjeningInntekterForVilkårVurdering(Long behandlingId, AktørId aktørId, Collection<LocalDate> skjæringstidspunkter) {
+        var grunnlagOpt = iayTjeneste.finnGrunnlag(behandlingId);
+        if (grunnlagOpt.isEmpty()) {
+            return Collections.emptyNavigableMap();
         }
-        return Collections.emptyList();
+        var iayGrunnlag = grunnlagOpt.get();
+        NavigableMap<LocalDate, List<OpptjeningInntektPeriode>> alle = new TreeMap<>();
+
+        for (var stp : new TreeSet<>(skjæringstidspunkter)) {
+            var filter = new InntektFilter(iayGrunnlag.getAktørInntektFraRegister(aktørId)).før(stp).filterPensjonsgivende();
+            var result = filter.filter((inntekt, inntektspost) -> inntekt.getArbeidsgiver() != null)
+                .mapInntektspost((inntekt, inntektspost) -> new OpptjeningInntektPeriode(inntektspost, new Opptjeningsnøkkel(null, inntekt.getArbeidsgiver())));
+            alle.put(stp, List.copyOf(result));
+        }
+        return Collections.unmodifiableNavigableMap(alle);
+
     }
 
-    public List<OpptjeningAktivitetPeriode> hentRelevanteOpptjeningAktiveterForVilkårVurdering(BehandlingReferanse behandlingReferanse, DatoIntervallEntitet vilkårsPeriode) {
-        final List<OpptjeningsperiodeForSaksbehandling> perioder = opptjeningsperioderTjeneste
-            .hentRelevanteOpptjeningAktiveterForVilkårVurdering(behandlingReferanse, vilkårsPeriode.getFomDato());
+    public NavigableMap<DatoIntervallEntitet, List<OpptjeningAktivitetPeriode>> hentRelevanteOpptjeningAktiveterForVilkårVurdering(BehandlingReferanse behandlingReferanse,
+                                                                                                                                   Collection<DatoIntervallEntitet> vilkårsPerioder) {
+        Long behandlingId = behandlingReferanse.getBehandlingId();
+        var grunnlagOpt = iayTjeneste.finnGrunnlag(behandlingId);
+        if (grunnlagOpt.isEmpty()) {
+            return Collections.emptyNavigableMap();
+        }
+        var opptjeningsresultat = opptjeningRepository.finnOpptjening(behandlingId);
+        var iayGrunnlag = grunnlagOpt.get();
+        NavigableMap<DatoIntervallEntitet, List<OpptjeningAktivitetPeriode>> alle = new TreeMap<>();
 
-        return perioder.stream().map(this::mapTilPerioder).collect(Collectors.toList());
+        for (var periode : new TreeSet<>(vilkårsPerioder)) {
+            LocalDate stp = periode.getFomDato();
+            var opptjening = opptjeningsresultat.flatMap(it -> it.finnOpptjening(stp)).orElseThrow();
+            var perioderForSaksbehandling = opptjeningsperioderTjeneste.hentRelevanteOpptjeningAktiveterForVilkårVurdering(behandlingReferanse, iayGrunnlag, opptjening, stp);
+            var opptjeningAktivitetPerioder = perioderForSaksbehandling.stream().map(this::mapTilPerioder).collect(Collectors.toList());
+            alle.put(periode, opptjeningAktivitetPerioder);
+        }
+        return Collections.unmodifiableNavigableMap(alle);
     }
 
     private OpptjeningAktivitetPeriode mapTilPerioder(OpptjeningsperiodeForSaksbehandling periode) {
